<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.febin.group21_hw04.MainActivity">

    <TextView
        android:text="@string/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textViewHeading"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp" />

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/buttonExit"
        android:textAllCaps="false" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonExit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:id="@+id/buttonStart"
        android:textAllCaps="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="73dp"
        android:id="@+id/frameLayout"
        android:layout_below="@+id/textViewHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/trivia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textViewMessage" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:id="@+id/progressBar3"
            android:layout_width="50dp" />

    </FrameLayout>


</RelativeLayout>
