<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.febin.group21_hw04.Trivia">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textViewQNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textViewTimer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayoutTrivia"
        android:layout_toRightOf="@+id/textViewQNumber"
        android:layout_toEndOf="@+id/textViewQNumber"
        android:layout_marginTop="12dp"
        android:id="@+id/textViewQuestion" />

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@+id/textViewQuestion"
        android:layout_toRightOf="@+id/textViewQNumber"
        android:layout_toEndOf="@+id/textViewQNumber"
        android:layout_marginTop="23dp"
        android:id="@+id/linearLayoutOptions"
        android:layout_height="170dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rgOptions" />
    </ScrollView>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp"
        android:id="@+id/buttonNext"
        android:textAllCaps="false"
        android:onClick="clickNext" />

    <Button
        android:text="@string/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:id="@+id/buttonPrev"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textViewQNumber"
        android:layout_toEndOf="@+id/textViewQNumber"
        android:textAllCaps="false"
        android:onClick="clickPrev" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="28dp"
        android:id="@+id/frameLayoutTrivia"
        android:layout_height="140dp"
        android:layout_below="@+id/textViewQNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border">
        <TextView
            android:text="@string/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:id="@+id/textViewMessageTrivia" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:id="@+id/progressBarTrivia"
            android:layout_width="50dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:layout_above="@+id/textViewQuestion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp" />

    </FrameLayout>

</RelativeLayout>
